--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!--for safari-->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="twitter" />
+    <!-- we can add lots of apple optimised icons -->
+
+    <link
+      rel="apple-touch-icon"
+      href="/images/icons/apple-icon-144x144.png"
+      sizes="144x144"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/images/icons/apple-icon-72x72.png"
+      sizes="72x72"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/images/icons/apple-icon-152x152.png"
+      sizes="152x152"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/images/icons/apple-icon-180x180.png"
+      sizes="180x180"
+    />
+    <!-- fallback for chrome and browser which doesn't support manifest will read from here -->
+    <meta name="theme-color" content="#00ffff" />
   </head>
   <body>
     <div id="root"></div>
