fix: code refactor

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       sizes="180x180"
     />
     <!-- fallback for chrome and browser which doesn't support manifest will read from here -->
-    <meta name="theme-color" content="#00ffff" />
+    <meta name="theme-color" content="#130cb7" />
   </head>
   <body>
     <div id="root"></div>
